# genki-dama

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
dama/tinystories/: finetune.py  inference.py
