[build-system]
requires = ["setuptools", "setuptools-golang"]
build-backend = "setuptools.build_meta"

[project]
name = "Genki-Dama"
description = "Machine Learning training framework with decentralized computing resources"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    # Python utils
    "python-dotenv",
    "PyYAML",
    "pyaml-env",
    "pytest",
    "torch",

    # Hugging Face
    "datasets",
    "sentence_transformers",
    "transformers",
]
version = "0.0.1"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = [
    ".", "genki",
]
